--- a/Demo_ASPFrom/Demo_ASPFrom/Web.config
+++ b/Demo_ASPFrom/Demo_ASPFrom/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="data source=192.168.35.230;initial catalog=EminexDB_UAT_25MAY2022;user id=sa;password=Manager1;Integrated Security=false" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=./;initial catalog=DbName;user id=sa;password=pass;Integrated Security=false" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <system.web>
